--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -9,7 +9,9 @@
     <h1 class="primary-title">Our formations</h1>
 
     {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('create_formation') }}">Create formation <b>+</b></a>
+    <div class="create-entities">
+        <a href="{{ path('create_formation') }}"><p>Create formation <b>+</b></p></a>
+    </div>
     {% endif %} 
 
     <div class="table-list">
@@ -21,9 +23,19 @@
         {% for formation in formations %}
 
             <div class="table-row">
-                <p class="table-item">{{ formation }}</p>
+                <a href="{{ path('list_session', {id:formation.id}) }}" class="table-item">
+                    <p>{{ formation }}</p>
+                </a>
                 {# later nb sessions will be put #}
+                <a href="{{ path('update_formation', {id: formation.id}) }}">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                </a>
+    
+                <a href="">
+                    <i class="fa-solid fa-xmark"></i>
+                </a>
             </div>
+
         {% endfor %}
     
     </div>
