--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,7 +29,7 @@
             <div class="home-formation-items">
                 <p><strong>{{ formation }}</strong></p>
 
-                <a href="">
+                <a href="{{ path('list_session', {id:formation.id}) }}">
                     details
                 </a>
             </div>
