--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,13 +50,19 @@ main {
     font-weight: var(--weight-bold);
 }
 
+.secondary-title {
+    color: var(--secondary-color-text);
+    font-size: var(--font-size-big);
+font-weight:normal;
+}
+
 em {
     font-weight: var(--weight-black);
 }
 
 /************************* Header *************************/
 /**********************************************************/
-header {
+nav {
     flex: 0.8;
     height: 100vh;
 
@@ -66,31 +72,31 @@ header {
     background-color: var(--secondary-background);
 }
 
-header a:first-child {
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-
-header a:last-child {
-    font-size: 25px;
-    margin-top: 20px;
-}
-
-header a:not(:first-child, :last-child) {
-    font-size: 20px;
-    transition: 0.3s;
-}
-
-header a:not(:first-child, :last-child):hover {
-    color: var(--primary-color-text);
-    transition: 0.3s;
-}
-
-header a {
+nav a {
     padding: 0 25px ;
     text-decoration: none;
     color: var(--secondary-color-text);
 }
+
+nav .nav-main {
+    font-size: 25px;
+    font-weight: var(--weight-bold);
+    margin: 25px 0;  
+    transition: 0.3s;
+}
+
+nav a:hover {
+    color: var(--primary-color-text);
+    transition: 0.3s;
+}
+
+nav a:not(.nav-main) {
+    font-size: 20px;
+    transition: 0.3s;
+}
+
+
+
 
 /************************* Wrapper ***************************/
 /*************************************************************/
@@ -162,12 +168,24 @@ header a {
     position: relative;
 }
 
-.table-row:first-child {
+.table-free {
+    padding: 0 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+
+    background-color: var(--secondary-background);
+
+    position: relative;
+}
+
+.table-row:first-child, .table-free:first-child {
     border-top-left-radius: 8px ;
     border-top-right-radius: 8px ;
 }
 
-.table-row:last-child {
+.table-row:last-child, .table-free:last-child {
     border-bottom-left-radius: 8px ;
     border-bottom-right-radius: 8px ;
 }
@@ -213,7 +231,7 @@ header a {
 
 
 /************************* Form (flex + grid) ***************************/
-/**************************************************************/
+/************************************************************************/
 .form-create {
     background-color: var(--secondary-background);
     padding: 10px 25px;
@@ -240,7 +258,7 @@ header a {
 }
 
 [class*="form-input"] {
-    height: 45px;
+    height: 35px;
     font-size: 17px;
 }
 
@@ -290,7 +308,27 @@ header a {
     transition: 0.3s;
 }
 
-/************************* Grid ***************************/
+/************************* FormRegister ***************************/
+/******************************************************************/
+.wrap-register {
+    padding: 0 15%!;
+}
+.wrap-register .form-create { /* input text / number */
+    display: grid;
+
+    grid-template-columns:  auto;
+    grid-template-rows: auto;
+
+    column-gap: 25px;
+    row-gap: 15px;
+}
+
+.wrap-register .form-create div:nth-child(-n + 2) { /* input text / number */
+    grid-column: span 3;
+    grid-row: 1 / 1 ;
+}
+
+/************************* GridDetailsSession ***************************/
 /**********************************************************/
 .wrap-details-session {
     margin: 25px 0;
@@ -306,15 +344,15 @@ header a {
     color: var(--secondary-color-text);
 }
 .wrap-details-session h1 {
-    grid-column: 1 / span 3;
+    grid-column: 1 / -1;
 }
 
 .wrap-details-session h2 {
-    grid-column: 1 / span 3;
+    grid-column: 1 / -1;
 }
 
 .wrap-details-session .form-create {
-    grid-column: 1 / span 6;
+    grid-column: span 3;
 }
 
 .wrap-details-session .row-unique {
@@ -334,17 +372,23 @@ header a {
 /************************* HomePage ************************/
 /***********************************************************/
 .create-entities {
+    height: calc(100% + 200px);
+    margin-bottom: 15px ;
     display: flex;
     flex-direction: column;
 }
 
 .create-entities a {
+    /* height: inherit; */
+    width: fit-content;
+    font-size: 18px;
     color: var(--primary-color-text);
     text-decoration: none;
     transition: 0.3s;
 }
 
 .create-entities a:hover {
+    font-size: 21px;
     color: var(--secondary-color-text);
     transition: 0.3s;
 }
@@ -382,10 +426,11 @@ header a {
     margin-bottom: 8px;
 }
 
-
-
-
-/************************* general *************************/
-
-
+/************************* detailsSession ************************/
+/*****************************************************************/
+#table-information .table-row:not(.table-header) {
+    flex-direction: column;
+    text-align: left;
+    padding: 0 15%;
+}
 
