--- a/templates/session/update.html.twig
+++ b/templates/session/update.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Update a session{% endblock %}
 
-{% block metadesc %}Update the session: {{ session }} via the form{% endblock %}
+{% block metadesc %}Update the session via the form{% endblock %}
 {% block pageWrapper %}update-session{% endblock %}
 
 
