--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -24,11 +24,11 @@
         </a>
     </div>
     <div class="table-free">
-        <p class="table-item">BirthDate: {{ user.formatedBirthDate }} ({{ user.showAge }})</p>
-        <p class="table-item">Email: {{ user.email }}</p>
-        <p class="table-item">Postcode: {{ user.postcode }}</p>
-        <p class="table-item">City: {{ user.city }}</p>
-        <p class="table-item">Adress: {{ user.adress }}</p>
+        <p class="table-item"><b>BirthDate:</b> {{ user.formatedBirthDate }} ({{ user.showAge }})</p>
+        <p class="table-item"><b>Email:</b> {{ user.email }}</p>
+        <p class="table-item"><b>Postcode:</b> {{ user.postcode }}</p>
+        <p class="table-item"><b>City:</b> {{ user.city }}</p>
+        <p class="table-item"><b>Adress:</b> {{ user.adress }}</p>
     </div>
 </div>
 
