--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -31,7 +31,7 @@
                     <i class="fa-solid fa-pen-to-square"></i>
                 </a>
     
-                <a href="">
+                <a href="{{ path('delete_formation', {id: formation.id}) }}" class="deleteIcon">
                     <i class="fa-solid fa-xmark"></i>
                 </a>
             </div>
