--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -19,8 +19,8 @@
             <i class="fa-solid fa-pen-to-square"></i>
         </a>
 
-        <a href="">
-            <i class="fa-solid fa-xmark"></i>
+        <a href="" class="deleteIcon">
+            <i class="fa-solid fa-xmark  "></i>
         </a>
     </div>
     <div class="table-free">
