--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
                 <a href="{{ path('app_home') }}" class="nav-main">Home</a>
     
                 {% if app.user %}
-                    
+
                     <a href="{{ path('app_formation') }}"><i class="fa-solid fa-caret-right"></i> Formations</a>
                                 
                     <a href="{{ path('app_session') }}"><i class="fa-solid fa-caret-right"></i> Sessions</a>
@@ -28,9 +28,14 @@
                     <a href="{{ path('app_tag') }}"><i class="fa-solid fa-caret-right"></i> Tags and Modules</a>
                 
                     <a href="{{ path('app_user') }}"><i class="fa-solid fa-caret-right"></i> Students</a>
+                    
+                    <div class="nav-main">
+                        <a href="{{ path('app_home') }}" class="nav-main">Profile</a>
+        
+                        <a href="{{ path('app_logout') }}" class="nav-main">Logout</a>
+                    </div>
             
-                    <a href="{{ path('app_logout') }}" class="nav-main">Logout</a>
-    
+
                 {% else %}
                     <a href="{{ path('app_register') }}" class="nav-main">
                         Register
@@ -54,6 +59,7 @@
 
         {% block javascripts %}
             <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
+            <script src="{{ asset('app/app.js') }}"></script>
             {# <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> #}
 
         {% endblock %}
