--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -89,9 +89,13 @@
 
         <div class="table-row">
             <p class="table-item">{{ programme }}</p>
-            <p class="table-item">{{ programme.duration }} days</p>       
+            <p class="table-item">{{ programme.duration }} days</p>      
+            
+            <a href="{{ path('update_programme', {id: programme.id}) }}">
+                <i class="fa-solid fa-pen-to-square"></i>
+            </a>
 
-            <a href="">
+            <a href="{{ path('delete_programme', {id: programme.id}) }}" class="deleteIcon">
                 <i class="fa-solid fa-xmark"></i>
             </a>
         </div>   
