--- a/templates/session/listByFormation.html.twig
+++ b/templates/session/listByFormation.html.twig
@@ -29,24 +29,32 @@
             <p class="table-item">Places</p>
         </div>
 
-        {% for session in formation.sessions %}
+        {% if formation.sessions | length > 0 %}
+
+            {% for session in formation.sessions %}
+            <div class="table-row">
+                <a href="{{ path('details_session', {id: session.id}) }}" class="table-item">
+                    {{ session }}
+                </a>
+                
+                <p class="table-item">{{ session.showDates }}</p>
+                <p class="table-item">{{ session.nbPlace }}</p>
+
+                <a href="{{ path('update_session', {id: session.id}) }}">
+                    <i class="fa-solid fa-pen-to-square"></i>
+                </a>
+
+                <a href="{{ path('delete_formation', {id: formation.id}) }}">
+                    <i class="fa-solid fa-xmark  "></i>
+                </a>
+            </div>
+            {% endfor %}
+
+        {% else %}
         <div class="table-row">
-            <a href="{{ path('details_session', {id: session.id}) }}" class="table-item">
-                {{ session }}
-            </a>
-            
-            <p class="table-item">{{ session.showDates }}</p>
-            <p class="table-item">{{ session.nbPlace }}</p>
-
-            <a href="{{ path('update_session', {id: session.id}) }}">
-                <i class="fa-solid fa-pen-to-square"></i>
-            </a>
-
-            <a href="">
-                <i class="fa-solid fa-xmark"></i>
-            </a>
+            <p class="table-item">There is no session for this formation yet</p>
         </div>
-        {% endfor %}
+        {% endif %}
         
     </div>
 
