--- a/templates/tag/index.html.twig
+++ b/templates/tag/index.html.twig
@@ -32,9 +32,9 @@
                 <a href="{{ path('update_tag', {id:tag.id}) }}">
                     <i class="fa-solid fa-pen-to-square"></i>
                 </a>
-    
-                <a href="">
-                    <i class="fa-solid fa-xmark"></i>
+                
+                <a href="{{ path('delete_tag', {id: tag.id}) }}" class="deleteIcon">
+                    <i class="fa-solid fa-xmark  "></i>
                 </a>
             </div>
 
@@ -48,7 +48,7 @@
                             <i class="fa-solid fa-pen-to-square"></i>
                         </a>
             
-                        <a href="">
+                        <a href="{{ path('delete_module', {id:module.id}) }}" class="deleteIcon">
                             <i class="fa-solid fa-xmark"></i>
                         </a>
                     </div>
