--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="{% block metadesc %}{% endblock %}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
