Fixed spelling mistake on 'address'

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -18,7 +18,7 @@
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.phone) }}
         {{ form_row(registrationForm.birthDate) }}
-        {{ form_row(registrationForm.adress) }}
+        {{ form_row(registrationForm.address) }}
         {{ form_row(registrationForm.postcode) }}
         {{ form_row(registrationForm.city) }}
 
