--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -28,7 +28,7 @@
         <p class="table-item"><b>Email:</b> {{ user.email }}</p>
         <p class="table-item"><b>Postcode:</b> {{ user.postcode }}</p>
         <p class="table-item"><b>City:</b> {{ user.city }}</p>
-        <p class="table-item"><b>Adress:</b> {{ user.adress }}</p>
+        <p class="table-item"><b>Address:</b> {{ user.address }}</p>
     </div>
 </div>
 
