--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -18,7 +18,7 @@
         {{ form_row(updateUserForm.email) }}
         {{ form_row(updateUserForm.phone) }}
         {{ form_row(updateUserForm.birthDate) }}
-        {{ form_row(updateUserForm.adress) }}
+        {{ form_row(updateUserForm.address) }}
         {{ form_row(updateUserForm.postcode) }}
         {{ form_row(updateUserForm.city) }}
   
