--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,7 +22,7 @@
 
     <h2>Our formations</h2>
 
-    <div class="home-formation-container">
+    <article class="home-formation-container">
 
         {% for formation in formations %}
 
@@ -36,7 +36,7 @@
 
         {% endfor %}
 
-    </div>
+    </article>
     
 
 {% endblock %}
