--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,6 +59,12 @@
             </div>
         </main>
 
+        {% block footer %}
+        <footer>
+
+        </footer>
+        {% endblock footer %} 
+
         {% block javascripts %}
             <script src="https://kit.fontawesome.com/3fb828feff.js" crossorigin="anonymous"></script>
             <script src="{{ asset('app/app.js') }}"></script>
