--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -18,40 +18,12 @@
         {% endfor %}
     {% endfor %}
 
-    {% if is_granted('ROLE_ADMIN') %}
-
-        {{ form_start(addStudentForm) }}
-            {{ form_errors(addStudentForm) }}
-            <h3>Add Student</h3>
-            <div class="form-content">
-                {{ form_row(addStudentForm.Student) }}
-            </div>
-            <button type="submit" class="form-btn-submit" >Submit</button>
-        {{ form_end(addStudentForm) }}
-
-        {{ form_start(addProgrammeForm) }}
-            {{ form_errors(addProgrammeForm) }}
-            <h3>Add Programme</h3>
-            <div class="form-content">
-                {{ form_row(addProgrammeForm.Module) }}
-                {{ form_row(addProgrammeForm.duration) }}
-            </div>
-            <button type="submit" class="form-btn-submit" >Submit</button>
-        {{ form_end(addProgrammeForm) }}
-
-    {% endif %} 
-
-    <div class="row-unique table-header">
-        <p class="table-item">Module</p>
-        <p class="table-item">Duration</p>
-    </div>
-
     <div id="table-information" class="table-list">
         <div class="table-row table-header">
-            <h3 class="table-items">Additionnal information</h3>
+            <p class="table-item">Additionnal information</p>
         </div>
 
-        <div class="table-row">
+        <div class="table-section">
             <p>From</p> 
             <p>{{ session.dateStart | date('d/m/Y') }}</p>
 
@@ -59,7 +31,7 @@
             <p>{{ session.dateEnd | date('d/m/Y') }}</p>
         </div>
 
-        <div class="table-row">
+        <div class="table-section">
             <p>Places left</p> 
             <p>{{ session.nbPlace }}</p>
 
@@ -70,34 +42,33 @@
             <p>{{ session.nbPlace }}</p>
         </div>
 
-        <div class="table-row">
+        <div class="table-section">
             <p>Formation</p>
             <strong>{{ session.Formation }}</strong>
         </div>
     </div>
 
+    {% if is_granted('ROLE_ADMIN') %}
+
+        {{ form_start(addProgrammeForm) }}
+            <h3>Add Programme</h3>
+            {{ form_errors(addProgrammeForm) }}
+        
+            {{ form_row(addProgrammeForm.Module) }}
+            {{ form_row(addProgrammeForm.duration) }}
+
+            <button type="submit" class="form-btn-submit" >Submit</button>
+        {{ form_end(addProgrammeForm) }}
+
+    {% endif %} 
+
+    <div class="row-unique table-header">
+        <p class="table-item">Module</p>
+        <p class="table-item">Duration</p>
+    </div>
+
     <div id="table-formation-module" class="table-list">
-
-        {# {% for programme in session.programmes %}
-        <div class="table-row table-header">
-            <p class="table-item">{{ programme.module.Tag }}</p>
-        </div>
-
-        <div class="table-row">
-            <p class="table-item">{{ programme }}</p>
-            <p class="table-item">{{ programme.duration }} days</p>      
-            
-            <a href="{{ path('update_programme', {id: programme.id}) }}">
-                <i class="fa-solid fa-pen-to-square"></i>
-            </a>
-
-            <a href="{{ path('delete_programme', {id: programme.id}) }}" class="deleteIcon">
-                <i class="fa-solid fa-xmark"></i>
-            </a>
-        </div>   
-        {% endfor %} #}
-        
-        
+                
         {% for tag in tags %}
         <div class="table-row table-header">
             <p class="table-item">{{ tag }}</p>
@@ -106,11 +77,7 @@
                 {% for programme in module.programmes %}
                     <div class="table-row">
                         <p class="table-item">{{ programme }}</p>
-                        <p class="table-item">{{ programme.duration }} days</p>      
-                        
-                        <a href="{{ path('update_programme', {id: programme.id}) }}">
-                            <i class="fa-solid fa-pen-to-square"></i>
-                        </a>
+                        <p class="table-item">{{ programme.duration }} days</p>
 
                         <a href="{{ path('delete_programme', {id: programme.id}) }}" class="deleteIcon">
                             <i class="fa-solid fa-xmark"></i>
@@ -119,6 +86,71 @@
                 {% endfor %}
             {% endfor %}
         {% endfor %}
+    </div>
+
+    <div class="table-header row-unique header-student">
+        <p class="table-item">Registered student</p>
+    </div>   
+
+    <div class="table-list">
+        <div class="table-row table-header">
+            <p class="table-item">Name</p>
+            <p class="table-item">City</p>
+            <p class="table-item">Birth date</p>
+            <p class="table-item">Remove</p>
+        </div>
+
+        {% if registeredUser|length > 0 %}
+        
+            {% for student in registeredUser %}
+            <div class="table-row">
+                <a href="{{ path('details_user', {id: student.id}) }}" class="table-item ">
+                    {{ student }}
+                </a>
+                
+                <p class="table-item">{{ student.city }}</p>
+                <p class="table-item">{{ student.formatedBirthDate }}</p>
+
+                <a href="" class="table-item">
+                    <b>-</b>
+                </a>
+            </div>  
+            {% endfor %}
+        
+        {% else %}
+            <div class="table-row">
+                <p class="table-item">No students registered yet</p>
+            </div>
+        {% endif %}
+    </div>
+
+    <div class="table-header row-unique header-student">
+        <p class="table-item">Unregistered student</p>
+    </div>
+
+    <div class="table-list">
+        <div class="table-row table-header">
+            <p class="table-item">Name</p>
+            <p class="table-item">City</p>
+            <p class="table-item">Birth date</p>
+            <p class="table-item">Add</p>
+        </div>
+
+        {% for student in unregisteredUser %}
+        <div class="table-row">
+            <a href="{{ path('details_user', {id: student.id}) }}" class="table-item ">
+                {{ student }}
+            </a>
+            
+            <p class="table-item">{{ student.city }}</p>
+            <p class="table-item">{{ student.formatedBirthDate }}</p>
+
+            <a href="" class="table-item">
+                <b>+</b>
+            </a>
+        </div>  
+        {% endfor %}
 
     </div>
+
 {% endblock %}
