--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -32,14 +32,21 @@
         </div>
 
         <div class="table-section">
-            <p>Places left</p> 
-            <p>{{ session.nbPlace }}</p>
+            <div class="info-place-left">
+                <b>Places left</b> 
+                <p>{{ session.nbPlace }}</p>
+            </div>
 
-            <p>Places taken</p> 
-            <p>{{ session.nbPlace }}</p>
+            <div class="info-place-taken">       
+                <b>Places taken</b> 
+                <p>{{ session.nbPlace }}</p>
+            </div>
 
-            <p>Total places</p> 
-            <p>{{ session.nbPlace }}</p>
+            <div class="info-place-total">   
+                <b>Total places</b> 
+                <p>{{ session.nbPlace }}</p>
+            </div>
+
         </div>
 
         <div class="table-section">
