--- a/templates/session/details.html.twig
+++ b/templates/session/details.html.twig
@@ -118,7 +118,7 @@
                 <p class="table-item">{{ student.city }}</p>
                 <p class="table-item">{{ student.formatedBirthDate }}</p>
 
-                <a href="" class="table-item">
+                <a href="delete_register_session" class="table-item">
                     <b>-</b>
                 </a>
             </div>  
@@ -152,7 +152,7 @@
             <p class="table-item">{{ student.city }}</p>
             <p class="table-item">{{ student.formatedBirthDate }}</p>
 
-            <a href="" class="table-item">
+            <a href="create_register_session" class="table-item">
                 <b>+</b>
             </a>
         </div>  
